--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
     <!-- Header -->
 
+        <section class="intro">
+            <div class="introtitle">
+                <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
+            </div>
+        </section>
 
     <!-- Main -->
 
