--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">    
     
+    <!-- Fontawsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,8 +47,22 @@
     <!-- Header -->
 
         <section class="intro">
+
             <div class="introtitle">
-                <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            </div>
+            <div class="descrimg">
+                <div class="descrcolumn">
+                    <div class="introdescr">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    </div>
+                    <div class="trial">Inizia la tua prova gratuita</div>
+                    <div class="cancel">Annulla in qualsiasi momento</div>
+                    <div><i class="fa-solid fa-arrow-down downarrow"></i></div>
+                </div>
+                <div class="introimg">
+                    
+                </div>
             </div>
         </section>
 
