building and dividing cards in main

--- a/index.html
+++ b/index.html
@@ -67,8 +67,50 @@
         </section>
 
     <!-- Main -->
+    <main>
+        <!-- Business Plans -->
+
+        <section class="businessplans">
+
+            <div class="businesscontainer">
+                <div class="businesstitle">
+                    <h1>Trova il piano business che fa per te</h1>
+                </div>
+                    <div class="payperiod">
+                        <span class="month"><i class="fa-solid fa-circle-dot selected checkbox"></i>Fattuazione mensile</span>
+                        <span class="annual"><i class="fa-regular fa-circle unselected checkbox"></i>Fatturazione annuale</span>
+                    </div>
+
+                    <!-- Big cards container -->
+                    <div class="cardscontainer">
+
+                        <div class="card">
 
 
+                        </div>
+
+                        <div class="card">
+
+                            
+                        </div>
+
+                        <div class="card">
+
+                            
+                        </div>
+
+
+
+
+                    </div>
+
+            </div>
+
+
+        </section>
+
+
+    </main>
     <!-- Footer -->
 
 
