--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
                                     <div><i class="fa-solid fa-share-nodes cardicon"></i></div> <div class="cardinfo">Funzioni di produttività premium e condivisione di file semplice e sicura</div>
                                 </div> 
                                     
+                                <div class="trial" id="cardtrial">Prova gratis per 30 giorni</div>
+                                <div class="paynow">oppue <a href="#">acquista ora</a></div>
+
+
+
+
                             </div>
                         </div>
 
