horizontal row done

--- a/index.html
+++ b/index.html
@@ -217,13 +217,27 @@
                             </div>
                         </div>
 
-
-
-
                     </div>
 
             </div>
 
+        </section>
+
+        <section class="businessplans" id="horizontalbusiness">
+
+            <!-- Card horizontal -->
+            <div class="card" id="cardhorizontal">
+                <div class="cardtitle" id="horizontalcardtitle"><i class="fa-solid fa-building cardicon"></i>Team</div>
+                <div class="productcardinner" id="horproductcardinner">
+                    <div class="productname" id="horproductname"><h1>Professional</h1></div>
+                    <div class="buttoncontact">
+                        <div class="horcontact">Contatta l'ufficio vendite</div>
+                    </div>
+            </div>
+            <div class="horprodinfo">
+                    <div class="productprice">Contatta l'ufficio vendite per i prezzi</div>
+                    <div class="user-timespan" id="horinfolite">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
+            </div>
 
         </section>
 
