adjusting spaces in code

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <section class="businessplans">
 
-            <div class="businesscontainer">
+            <div class="businesscontainer">          <!-- Cards-->
                 <div class="businesstitle">
                     <h1>Trova il piano business che fa per te</h1>
                 </div>
@@ -216,16 +216,14 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
-
             </div>
 
         </section>
 
+        <!-- Card horizontal -->
         <section class="businessplans" id="horizontalbusiness">
 
-            <!-- Card horizontal -->
             <div class="card" id="cardhorizontal">
                 <div class="cardtitle" id="horizontalcardtitle"><i class="fa-solid fa-building cardicon"></i>Team</div>
                 <div class="productcardinner" id="horproductcardinner">
