--- a/index.html
+++ b/index.html
@@ -247,7 +247,13 @@
             </div>
 
             <div id="partnerdescr">
-                
+                <h1>Enta in contatto con un partner dropbox</h1>
+                <div id="parttext" class="user-timespan">
+                    Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                </div>
+                <div id="partbutton">
+                    Trova un partner
+                </div>
             </div>
 
 
