--- a/index.html
+++ b/index.html
@@ -302,6 +302,16 @@
 
         </section>
 
+        <section class="businessplans" id="costumers">
+
+            <div class="businesstitle" id="costumerstitle">
+                <h1>Più di 500.000 team utilizzano Dropbox Business</h1>
+            </div>
+            
+            <a href="#">Scopri di più sui nosti clienti</a>
+
+        </section>
+
 
 
 
