building brands center structure

--- a/index.html
+++ b/index.html
@@ -344,7 +344,13 @@
 
             </div>
 
-            <div class="macroblock">
+            <div class="macroblock" >
+
+                <div class="brandcontent">
+
+                    w4hgiuwebfiub
+
+                </div>
                 
             </div>
 
