--- a/index.html
+++ b/index.html
@@ -492,7 +492,10 @@
             </div>
         </section>
 
-
+        <!-- FAQ -->
+        <section class="businessplans" id="faq">
+            
+        </section>
 
     </main>
     <!-- Footer -->
