faq section completed

--- a/index.html
+++ b/index.html
@@ -494,7 +494,35 @@
 
         <!-- FAQ -->
         <section class="businessplans" id="faq">
-            
+            <div class="faqtitle">
+                Domande Frequenti
+            </div>
+
+            <div class="faqquestion">
+                Qual'è la differenza fra Dropbox Standard e Dropbox Business Advanced?
+
+                <div>
+                    <i class="fa-solid fa-caret-down caret-down"></i>
+                </div>
+            </div>
+
+            <div class="faqquestion">
+                Qual'è la differenza fra Dropbox Standard e Dropbox Business Advanced?
+
+                <div>
+                    <i class="fa-solid fa-caret-down caret-down"></i>
+                </div>
+            </div>
+
+            <div class="faqquestion">
+                Qual'è la differenza fra Dropbox Standard e Dropbox Business Advanced?
+
+                <div>
+                    <i class="fa-solid fa-caret-down caret-down"></i>
+                </div>
+            </div>
+
+            <div></div>
         </section>
 
     </main>
