done border on hover to brandsgallery & arrow link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="trial">Inizia la tua prova gratuita</div>
                     <div class="cancel">Annulla in qualsiasi momento</div>
-                    <div><i class="fa-solid fa-arrow-down downarrow"></i></div>
+                    <div><a href="#scroll"><i class="fa-solid fa-arrow-down downarrow"></i></a></div>
                 </div>
                 <div class="introimg">
                     
@@ -73,7 +73,7 @@
         <section class="businessplans">
 
             <div class="businesscontainer">          <!-- Cards-->
-                <div class="businesstitle">
+                <div class="businesstitle" id="scroll">
                     <h1>Trova il piano business che fa per te</h1>
                 </div>
                     <div class="payperiod">
